nav-bar not fixed, carousel white space gone

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,6 +1,12 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+body {
+ //  margin-top: 50px; // accommodate the navbar
+  font-family: "Open Sans","Microsoft YaHei","Hiragino Sans GB","Hiragino Sans GB W3","Helvetica Neue",Arial,sans-serif;
+
+  }
+
 // no rounded corners
 * {
   border-radius: 0 !important;
@@ -14,30 +20,29 @@ div.jumbotron > a > span {
   height:100%;
   top:0;
   left: 0;
-
-  z-index: 1;
-  
+  z-index: 1;  
 }  
+
+.row .jumbotron {
+  padding: 15px 15px;
+  height: 300px;  
+  padding-right: 30px;
+  padding-left: 30px;
+}
+
+.row .jumbotron h1,
+.row .jumbotron .h1 {
+    font-size: 36px;
+}
 
 .jumbotron {
   position:relative;
-  padding: 15px 15px;
-  
-  }
-  
-.container .jumbotron {
-  padding-left: 30px;
-  
-  }
+}
 
 div.jumbotron > a > span:hover {
   background-color: rgba(255,255,255,0.3)
 
 }   
-
-.row .jumbotron {
-  height: 350px;
-}
 
 .jumbotron:nth-of-type(1) {
   background: #F78F31;
@@ -92,7 +97,6 @@ div.jumbotron > a > span:hover {
 .voffset8 { margin-top: 100px; }
 .voffset9 { margin-top: 150px; }
 
-
 // to get bootstrap icons to show
 @font-face {
     font-family: 'Glyphicons Halflings';
@@ -100,13 +104,9 @@ div.jumbotron > a > span:hover {
     src: url('/assets/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('/assets/glyphicons-halflings-regular.woff') format('woff'), url('/assets/glyphicons-halflings-regular.ttf') format('truetype'), url('/assets/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
 }
 
-body {
-  margin-top: 50px; // accommodate the navbar
-  
-  font-family: "Open Sans","Microsoft YaHei","Hiragino Sans GB","Hiragino Sans GB W3","Helvetica Neue",Arial,sans-serif;
-
-  }
-  
+.navbar {
+  margin-bottom:0px;
+}
 .navbar-default {
   background-color: #ef5ba1;
   border:0;
@@ -144,11 +144,12 @@ font-size: 12px;
   background-color: #ffffff;
 }
 .navbar-default .navbar-toggle .icon-bar {
-  background-color: #ffffff;
+  background-color: #facde2;
 }
+
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
-  border-color: #ffffff;
+  border:0;
 }
 .navbar-default .navbar-link {
   color: #ffffff;
@@ -170,9 +171,22 @@ font-size: 12px;
   }
 }
 
+.carousel-indicators {
+  bottom:-40px;
+}
+
+.carousel-indicators li {
+  border-color:#F27CAD;
+  background-color:#EF5BA1;
+}
+
+// space for indicators
+.carousel-inner {
+  margin-bottom:40px;
+}
+
 .carousel-control.left, .carousel-control.right {
     background-image: none;
-
 }
   
 .carousel-inner > .item  {
